fix: align paddings with design

--- a/packages/components/src/components/control-panel-navigation-item-group/control-panel-navigation-item-group-menu-popover.scss
+++ b/packages/components/src/components/control-panel-navigation-item-group/control-panel-navigation-item-group-menu-popover.scss
@@ -75,6 +75,7 @@ $z-index-popover: 70;
 		block-size: fit-content;
 		position: absolute;
 		inline-size: variables.$db-container-xs;
+		gap: variables.$db-spacing-fixed-xs;
 
 		// TODO: This causes some flash for angular navigation item group
 		transition: visibility 1ms linear; // workaround to enable focus with keyboard
