--- a/packages/components/src/components/control-panel-navigation-item-group/control-panel-navigation-item-group-menu-tree.scss
+++ b/packages/components/src/components/control-panel-navigation-item-group/control-panel-navigation-item-group-menu-tree.scss
@@ -15,7 +15,7 @@
 	overflow: hidden;
 	gap: variables.$db-spacing-fixed-xs;
 	/* stylelint-disable-next-line db-ux/use-spacings */
-	padding: variables.$db-spacing-fixed-xs 0 0 1lh;
+	padding-inline-start: 1lh;
 
 	@media screen and (prefers-reduced-motion: no-preference) {
 		transition: block-size #{variables.$db-transition-straight-emotional};
